--- a/static/index.html
+++ b/static/index.html
@@ -360,10 +360,16 @@
                             toggleSprintHistoryButton.onclick = toggleSprintHistory;
                             toggleSprintHistoryButton.innerHTML = "Show/Hide Sprint History";
 
+                            var sprintTag = document.createElement("input");
+                            sprintTag.id = "sprint_tag";
+                            sprintTag.placeholder = "sprint tag";
+                            sprintTag.defaultValue = "";
+
                             element.appendChild(heading);
                             element.appendChild(sprintP);
                             element.appendChild(sprintParent);
                             element.appendChild(toggleSprintHistoryButton);
+                            element.appendChild(sprintTag);
                             element.appendChild(sprintHistoryP);
                             function getNewState(oldState) {
                                 var newState = {};
@@ -387,7 +393,11 @@
                                     document.getElementById("sprint_p").innerHTML = getDisplay(stateUpdate);
                                     if( stateUpdate["sprint_start_time"] < 0 && (state["sprint_start_time"] >= 0)) {
                                             alert("Times up!");
-                                            var sprintHistory = "<br>" + getPrettyTime(getTime()) + " Duration " + (stateUpdate["sprint_duration"]/60) + " minutes:";
+                                            var sprintHistory = document.getElementById("sprint_tag").value.trim();
+                                            if(sprintHistory.length != 0) {
+                                                sprintHistory = "<br><i>-- " + sprintHistory + "</i>";
+                                            }
+                                            sprintHistory += "<br>" + getPrettyTime(getTime()) + " - Duration " + (stateUpdate["sprint_duration"]/60) + " minutes:";
                                             for (var i=0; i<widgetResolutionOrder.length; i++) {
                                                 var widgetKey = widgetResolutionOrder[i];
                                                 if(widgetKey in widgetState) {
