--- a/static/index.html
+++ b/static/index.html
@@ -395,7 +395,7 @@
                                             alert("Times up!");
                                             var sprintHistory = document.getElementById("sprint_tag").value.trim();
                                             if(sprintHistory.length != 0) {
-                                                sprintHistory = "<br><i>-- " + sprintHistory + "</i>";
+                                                sprintHistory = "<br><i>-- " + sprintHistory + " --</i>";
                                             }
                                             sprintHistory += "<br>" + getPrettyTime(getTime()) + " - Duration " + (stateUpdate["sprint_duration"]/60) + " minutes:";
                                             for (var i=0; i<widgetResolutionOrder.length; i++) {
