--- a/static/index.html
+++ b/static/index.html
@@ -394,7 +394,7 @@
                                     if( stateUpdate["sprint_start_time"] < 0 && (state["sprint_start_time"] >= 0)) {
                                             alert("Times up!");
                                             var sprintHistory = "<br><i>-- " + document.getElementById("sprint_tag").value.trim() + " --</i>";
-                                            sprintHistory += "<br>" + getPrettyTime(getTime()) + " - Duration " + (stateUpdate["sprint_duration"]/60) + " minutes:";
+                                            sprintHistory += "<br>" + getPrettyTime(getTime()) + " - " + (stateUpdate["sprint_duration"]/60) + " minutes:";
                                             for (var i=0; i<widgetResolutionOrder.length; i++) {
                                                 var widgetKey = widgetResolutionOrder[i];
                                                 if(widgetKey in widgetState) {
