save on completion of sprint

--- a/static/index.html
+++ b/static/index.html
@@ -419,6 +419,7 @@
                                             }
                                             stateUpdate["sprint_history"].push(sprintHistory);
                                             updateSprintHistory(stateUpdate);
+                                            saveState();
                                             alert("Times up!");
                                     }
                                     return stateUpdate;
